[gd_scene load_steps=14 format=2]

[ext_resource path="res://Assets/Characters/sShadowSmall.png" type="Texture" id=1]
[ext_resource path="res://Assets/Characters/sPlayer.png" type="Texture" id=2]
[ext_resource path="res://Scripts/Characters/Player.gd" type="Script" id=3]
[ext_resource path="res://Assets/UI/sTriangleCursor.png" type="Texture" id=4]
[ext_resource path="res://Assets/UI/sSquareCursor.png" type="Texture" id=5]

[sub_resource type="AtlasTexture" id=1]
flags = 4
atlas = ExtResource( 2 )
region = Rect2( 0, 0, 500, 500 )

[sub_resource type="AtlasTexture" id=2]
flags = 4
atlas = ExtResource( 2 )
region = Rect2( 500, 0, 500, 500 )

[sub_resource type="AtlasTexture" id=3]
flags = 4
atlas = ExtResource( 2 )
region = Rect2( 1000, 0, 500, 500 )

[sub_resource type="SpriteFrames" id=4]
animations = [ {
"frames": [ SubResource( 1 ) ],
"loop": true,
"name": "Idle",
"speed": 5.0
}, {
"frames": [ SubResource( 2 ), SubResource( 3 ) ],
"loop": true,
"name": "Walk",
"speed": 5.0
} ]

[sub_resource type="CapsuleShape2D" id=5]
radius = 137.0
height = 0.0

[sub_resource type="AtlasTexture" id=6]
flags = 4
atlas = ExtResource( 5 )
region = Rect2( 0, 0, 500, 500 )

[sub_resource type="AtlasTexture" id=7]
flags = 4
atlas = ExtResource( 4 )
region = Rect2( 0, 0, 500, 500 )

[sub_resource type="SpriteFrames" id=8]
animations = [ {
"frames": [ SubResource( 6 ) ],
"loop": true,
"name": "Square",
"speed": 5.0
}, {
"frames": [ SubResource( 7 ) ],
"loop": true,
"name": "Triangle",
"speed": 5.0
} ]

[node name="Player" type="Area2D"]
scale = Vector2( 0.25, 0.25 )
script = ExtResource( 3 )

[node name="Sprite" type="Sprite" parent="."]
modulate = Color( 1, 1, 1, 0.607843 )
texture = ExtResource( 1 )

[node name="AnimatedSprite" type="AnimatedSprite" parent="."]
frames = SubResource( 4 )
animation = "Idle"

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( -4, -11 )
shape = SubResource( 5 )

[node name="Cursor" type="AnimatedSprite" parent="."]
frames = SubResource( 8 )
animation = "Square"

[node name="Position2D" type="Position2D" parent="Cursor"]
position = Vector2( 224, -8 )

[node name="Player" type="KinematicBody2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Player"]
position = Vector2( -4, -11 )
shape = SubResource( 5 )

[node name="DashDurationTimer" type="Timer" parent="."]
wait_time = 0.3
one_shot = true

[node name="DashAvailable" type="Timer" parent="."]
wait_time = 0.6
one_shot = true

[connection signal="body_entered" from="." to="." method="_on_Player_body_entered"]
[connection signal="timeout" from="DashDurationTimer" to="." method="_on_DashDurationTimer_timeout"]
[connection signal="timeout" from="DashAvailable" to="." method="_on_DashAvailable_timeout"]
